fixed missing word added audition details

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<div class="row 100%">
 						<div class="12u 12u$(medium)">
 							<section class="box">
-								<p>Canticum Novum is the only choir in South Africa consisting of mostly students and young with a repertoire dedicated primarily to sacred music. While being part of the Dutch Reformed Church of Stellenbosch on a full time basis, the choir is also a concert choir with a broad repertoire</p>
+								<p>Canticum Novum is the only choir in South Africa consisting of mostly students and young people with a repertoire dedicated primarily to sacred music. While being part of the Dutch Reformed Church of Stellenbosch on a full time basis, the choir is also a concert choir with a broad repertoire</p>
 							</section>
 						</div>
 						
@@ -195,6 +195,12 @@
 					<header class="major">
 						<h2>Contact Us</h2>
 						<p>Feel free to mail us if you want to schedule an audition or just find out more about us.</p>
+						
+						<div style="background-color:#ED6046; padding:5px;">
+						<br/>
+						<p>The next auditions are on <b>22 & 23 October</b> </p>
+						<p>Please add your NAME and CONTACT NUMBER when mailing us</p>
+						</div>
 					</header>
 				</div>
 				<div class="container 50%">
