added email adress

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 						<br/>
 						<p>The next auditions are on <b>22 & 23 October</b> </p>
 						<p>Please add your NAME and CONTACT NUMBER when mailing us</p>
+						<p>(canticumnovumstb@gmail.com)</p>
 						</div>
 					</header>
 				</div>
